	CHANGES IN trip VERSION 1.1-18

OVERVIEW


  CHANGES IN trip VERSION 1.1-17

OVERVIEW

 o This release provides some overdue cleanup and improvements. 

SIGNIFICANT USER-VISIBLE CHANGES

 o readArgos is now significantly faster and more reliable

 o new function explode to convert to a SpatialLinesDataFrame with
   line segments for every individual time step

 o trackAngle is now generic with methods for trip objects and matrix/es

BUG FIXES

 o fixed line width in vignette


  CHANGES IN trip VERSION 1.1-16

 o trackDistance is now generic, with a new argument "prev"

 o new function trackAngle to calculate internal angles between segments

 o fixed install problem with imports from maptools/sp, and 
   other problems with the namespace, all doc is now done with roxygen2
 

	CHANGES IN trip VERSION 1.1-15

OVERVIEW
	
   o modification to to summary.trip to give summaries of distance, speed
   
   o implemented trackAngle() to provide turning angles along trips
	
   o method for spTransform("trip", "character")

     	  
	CHANGES IN trip VERSION 1.1-14

   o much of the source was overhauled and tidied up

   o cut.trip added to replace old function trip.split.exact which is deprecated

   o tripTransform deprecated, replaced by method for spTransform
   (generic from sp)


        CHANGES IN trip VERSION 1.1-12

   o fix for ltraj2trip


ACKNOWLEDGEMENTS
	
   o Thanks to Sebastian Luque for ltraj2trip patch


        CHANGES IN trip VERSION 1.1-12

   o reduced time taken by examples by removal with dontrun, thanks
	to CRAN maintainers


        CHANGES IN trip VERSION 1.1-11

ACKNOWLEDGEMENTS

   o Thanks to Sebastian Luque for advice on NAMESPACE fixes

   o thanks to Andrew Irwin for update on trackDistance documentation


OVERVIEW

   o added a NAMESPACE file and package updates to make everything
   work, maptools is now Imports, rgdal, adehabitatLT and lattice are
   Suggests
	
   o modified dependency on adehabitat to adehabitatLT
