@@ -6,7 +6,7 @@ Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"),
     person("Sebastian", "Luque", role = "ctb",
     email = "spluque@gmail.com"))
 Maintainer: Michael D. Sumner <mdsumner@gmail.com>
-Version: 1.1-17
+Version: 1.1-18
 Depends:
     methods,
     sp
